<resources>
    <!-- General strings such as application and activity names -->
    <string name="app_name">TouristofficeHealthyService</string>
    <string name="activity_welcome_name">Getting started</string>
    <string name="activity_main_name">Home</string>
    <string name="activity_questionnaire_name">Questionnaires</string>
    <string name="activity_questionnairelist_name">Archived Questionnaires</string>
    <string name="about_activity_label">About this application</string>
    <string name="title_activity_questionnaire_details">QuestionnaireDetailsActivity</string>

    <!-- Other general strings -->
    <string-array name="language_array">
        <item>Français</item>
        <item>Deutsch</item>
        <item>English</item>
    </string-array>

    <!-- Strings used in WelcomeActivity -->
    <string name="desc_img_logo_touristoffice">Logo office de tourisme</string>
    <string name="desc_img_logo_valais_1815">Logo valais 1815-2015</string>
    <string name="welcome_text">Bienvenue au centre du valais!</string>
    <string name="welcome_continue_DE">Weiter in Deutsch</string>
    <string name="welcome_continue_FR">Continuer en français</string>
    <string name="welcome_continue_EN">Continue in English</string>

    <!-- Strings used in AboutActivity -->
    <string name="action_settings">action_settings</string>
    <string name="action_about">Info</string>
    <string name="action_authors">Gwenaëlle Abbé, Samuel Dorsaz, Lukas Germann, Daniel Pott</string>
    <string name="about_thanks">Merci d\'utiliser notre application!</string>

    <!-- Strings used in MainActivity -->
    <string name="main_readme_text">Cette application vous est proposé par l\'office de
    tourisme locale et vous aide à trouver les activitées les plus adapté pour vous.
    Commencez par remplir un nouveau questionnaire par le bouton "NOUVEAU" ou consultez
    un ancien questionnaire par le bouton "ANCIENS".</string>
    <string name="main_readme_text2">Votre numéro de téléphone est utilisé seulement
    pour vous contacter pour une consultation personnalisé auprès de l\'office de tourisme
    et ne va jamais être donné à de tiers.</string>
    <string name="main_btn_new">NOUVEAU</string>
    <string name="main_btn_archiv">ANCIENS</string>

    <!-- Strings used in QuestionnaireActivity -->


    <!-- Strings used in QuestionnaireListActivity -->

</resources>
